2013-11-13  Marc Glisse  <marc.glisse@inria.fr>

	PR tree-optimization/59077
	* ipa-pure-const.c (better_state): Update *state.

2013-11-13  Christophe Lyon  <christophe.lyon@linaro.org>

	* config/aarch64/aarch64.h (FRAME_GROWS_DOWNWARD): Define to 1.
	* config/aarch64/aarch64.c (aarch64_initial_elimination_offset):
	Update offset calculations.

2013-11-13  Eric Botcazou  <ebotcazou@adacore.com>

	PR ada/35998
	* dwarf2out.c (add_byte_size_attribute): Also use int_size_in_bytes
	for fields.  Do not add the attribute if the size is negative.

2013-11-13  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/arm/arm.c: Include aarch-cost-tables.h.
	(generic_extra_costs): Move from here...
	* config/arm/aarch-cost-tables.h: ... To here.  New file.

2013-11-13  Alexander Ivchenko  <alexander.ivchenko@intel.com>
	    Maxim Kuznetsov  <maxim.kuznetsov@intel.com>
	    Sergey Lega  <sergey.s.lega@intel.com>
	    Anna Tikhonova  <anna.tikhonova@intel.com>
	    Ilya Tocar  <ilya.tocar@intel.com>
	    Andrey Turetskiy  <andrey.turetskiy@intel.com>
	    Ilya Verbin  <ilya.verbin@intel.com>
	    Kirill Yukhin  <kirill.yukhin@intel.com>
	    Michael Zolotukhin  <michael.v.zolotukhin@intel.com>

	* config/i386/i386.c (ix86_print_operand): Support z-masking
	* config/i386/predicate.md (const_0_to_4_operand): New.
	(const_0_to_5_operand): Ditto.
	* config/i386/sse.md (UNSPEC_COMPRESS): New.
	(UNSPEC_COMPRESS_STORE): Ditto.
	(UNSPEC_EXPAND): Ditto.
	(UNSPEC_EMBEDDED_ROUNDING): Ditto.
	(define_mode_attr ssescalarsize): Ditto.
	(avx512f_load<mode>_mask): Ditto.
	(avx512f_store<mode>_mask): Ditto.
	(avx512f_storedqu<mode>_mask): Ditto.
	(avx512f_vmcmp<mode>3_mask): Ditto.
	(avx512f_fmadd_<mode>_mask): Ditto.
	(avx512f_fmadd_<mode>_mask3): Ditto.
	(avx512f_fmsub_<mode>_mask): Ditto.
	(avx512f_fmsub_<mode>_mask3): Ditto.
	(avx512f_fnmadd_<mode>_mask): Ditto.
	(avx512f_fnmadd_<mode>_mask3): Ditto.
	(avx512f_fnmsub_<mode>_mask): Ditto.
	(avx512f_fnmsub_<mode>_mask3): Ditto.